# llama

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config
libllama/: Cargo.toml  build.rs
libllama/src/: clock.rs  dbgcore.rs  fs.rs  gdbstub.rs  hwcore.rs  lib.rs  mem.rs  msgs.rs  rt_data.rs
libllama/src/cpu/: arm.decoder  caches.rs  cpu.rs  decoder_arm.rs  decoder_thumb.rs  define_inst.rs  dummy11.rs  interpreter_arm.rs  interpreter_dummy11.rs  interpreter_thumb.rs  irq.rs  mod.rs  regs.rs  thumb.decoder
libllama/src/cpu/coproc/: mod.rs  sys_control.rs
libllama/src/cpu/instructions_arm/: branch.rs  coprocessor.rs  data_processing.rs  load_store.rs  load_store_multiple.rs  media.rs  misc.rs  mod.rs  program_status.rs
libllama/src/cpu/instructions_thumb/: branch.rs  data_processing.rs  load_store.rs  media.rs  misc.rs  mod.rs
libllama/src/io/: aes.rs  config.rs  ctrcard.rs  dmac.decoder  emmc.rs  fbuf.rs  gpu.rs  hid.rs  i2c.rs  irq.rs  lcd.rs  mod.rs  ndma.rs  otp.rs  priv11.rs  pxi.rs  regs.rs  rsa.rs  sha.rs  timer.rs  xdma.rs
libllama/src/io/emmc/: card.rs  cmds.rs  mod.rs  mode_sd.rs
libllama/src/ldr/: ctr9.rs  firm.rs  mod.rs
libllama/src/utils/: bcast.rs  bitutils.rs  bytes.rs  cache.rs  fifo.rs  mod.rs  num.rs  strutils.rs  task.rs
libllama/tools/decoder-gen/: _parser.py  decoder-gen.py  emitter.py  lexer.py
llama-cli/: commands.rs  gui.rs  main.rs
llama-ui/: commands.rs  main.rs  uilog.rs
llama-ui/qml/: CMakeLists.txt  CommandLine.qml  DbgConsole.qml  ScreenView.qml  SideButton.qml  interop.h  interop.hpp  llamagui.pro  main.cpp  main.qml  qml.qrc  screens.cpp  screens.hpp
src/: dbgcore.rs  decoder.rs  hwcore.rs  main.rs  mem.rs  ram.rs  system.rs
src/cpu/: cpu.rs  decoder.rs  decoder_arm.rs  decoder_thumb.rs  interpreter.rs  interpreter_arm.rs  interpreter_thumb.rs  mod.rs
src/cpu/instructions/: branch.rs  data_processing.rs  load_store.rs  load_store_multiple.rs  mod.rs  program_status.rs
src/cpu/instructions_arm/: branch.rs  data_processing.rs  (+4 more)
src/io/: config.rs  emmc.rs  irq.rs  mod.rs
src/utils/: bitutils.rs
(+4 files in other folders)
