[package]
name = "libllama"
version = "0.1.0"
authors = ["archshift <gh@archshift.com>"]

[dependencies]
bitutils = { git = "https://github.com/archshift/bitutils-rs" }
error-chain = "0.7"
extprim = "1.3"
indextree = "1.0"
json = "0.11"
log = "0.3"
openssl = "0.9"

[features]
trace_instructions = []