[package]
name = "libllama"
version = "0.1.0"
authors = ["archshift <gh@archshift.com>"]

[dependencies]
bitutils = { git = "https://github.com/archshift/bitutils-rs" }
error-chain = "0.11"
extprim = "1.4"
indextree = "1.0"
json = "0.11"
log = "0.3"
mio = "0.6"
openssl = "0.9"
parking_lot = "0.4"

[features]
trace_instructions = []